2005-05-19  Vincent Noel  <vnoel@cox.net>

	* calendar.c: (init_calendar_data), (calendar_month_changed),
	(calendar_day_selected):
	* logview.c: (loglist_selection_changed): Make the calendar
	behave when no log is selected.

2005-05-19  Vincent Noel  <vnoel@cox.net>

	* Makefile.am:
	* log_repaint.c: (handle_row_activation_cb), (log_repaint):
	* logview.c: (logview_create_window), (CloseLogMenu),
	(toggle_calendar), (logview_menus_set_state):
	Remove the "details" window - it shows the same info as
	the main window.

2005-05-19  Vincent Noel  <vnoel@cox.net>

	* calendar.c: (CalendarMenu), (read_marked_dates),
	(init_calendar_data):
	* logview.c: (logview_select_log), (logview_create_window),
	(CreateMainWin), (CloseLogMenu), (FileSelectResponse),
	(toggle_sidebar), (toggle_calendar):
	* logview.h: Move the calendar to the new sidebar. Add a toggle
	to show/hide the sidebar.

2005-05-17  Vincent Noel  <vnoel@cox.net>

	* logview.c: (logview_add_logs_from_names),
	(loglist_selection_changed), (loglist_remove_selected_log),
	(logview_menus_set_state): Remove debug spew.

2005-05-17  Vincent Noel  <vnoel@cox.net>

	* logrtns.c: (file_exist):
	* logview.c: (logview_save_prefs), (destroy), (logview_select_log),
	(logview_add_log), (logview_add_log_from_name),
	(logview_add_logs_from_names), (logview_remove_log), (main),
	(logview_create_window), (logview_find_log_from_name),
	(loglist_selection_changed), (loglist_find_logname),
	(loglist_select_log_from_name), (loglist_add_log),
	(loglist_remove_selected_log), (loglist_create), (CreateMainWin),
	(CloseLogMenu), (FileSelectResponse), (toggle_monitor),
	(logview_menus_set_state), (logview_set_window_title):
	* logview.h:
	* misc.c: (ShowQueuedErrMessages):
	* userprefs.c: (parse_syslog), (prefs_create_defaults),
	(prefs_free_loglist), (prefs_load), (prefs_save):
	* userprefs.h:

	Big UI change : add a sidebar that shows all the opened logs.
	This is a work in progress - monitoring does not work yet, and it