@@ -1,5 +1,12 @@
 2005-05-19  Vincent Noel  <vnoel@cox.net>
 
+	* calendar.c: (calendar_day_selected),
+	(calendar_day_selected_double_click):
+	* logview.c: (loglist_create), (CreateMainWin), (toggle_monitor):
+	Better way to show/hide the monitor area.
+
+2005-05-19  Vincent Noel  <vnoel@cox.net>
+
 	* calendar.c: (init_calendar_data), (calendar_month_changed),
 	(calendar_day_selected):
 	* logview.c: (loglist_selection_changed): Make the calendar
